<resources>
    <string name="app_name">SchoolConnect</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="post_str"><![CDATA[
<b>Aadhyaray__22</b>  Celebrating the festival Raksha Bandha as the bond of love and protection between the brothers and sisters.
]]></string>
    <string name="mail">mail</string>
    <string name="call">call</string>
    <string name="whatsapp">whatsapp</string>
    <string name="notice_image">notice image</string>
    <string name="_20_min_ago">20 min ago</string>
    <string name="it_seems_we_have_a_lot_in_common_amp_have_a_lot_of_interest_in_each_other"><![CDATA[It seems we have a lot in common & have a lot of interest in each other]]></string>
    <string name="enter_email">Please enter your email</string>
    <string name="enter_password">Please enter your password</string>

</resources>