<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_pink"
    tools:context=".presentation.activity.SupportActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_5sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/_12sdp"
            android:layout_height="@dimen/_12sdp"
            android:layout_margin="@dimen/_5sdp"
            android:src="@drawable/back_icon" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Support"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/back" />


    <ImageView
        android:id="@+id/supportImage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_290sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:src="@drawable/support_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="Message"
        android:textSize="@dimen/_10sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/supportImage" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:background="@drawable/edit_text_bg"
        android:gravity="top"
        android:hint="message"
        android:padding="@dimen/_8sdp"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text" />

    <!-- Logout Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogout"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/support_button"
        android:layout_marginStart="@dimen/_10sdp"
        android:text="Send"
        android:textAllCaps="false"
        android:textSize="@dimen/_10sdp"
        android:textColor="@color/green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <ImageView
        android:id="@+id/mail"
        android:layout_width="@dimen/_26sdp"
        android:layout_height="@dimen/_26sdp"
        android:background="@drawable/mail__icon"
        android:contentDescription="@string/mail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_20sdp"/>

    <ImageView
        android:layout_width="@dimen/_26sdp"
        android:layout_height="@dimen/_26sdp"
        android:background="@drawable/call_icon"
        app:layout_constraintEnd_toStartOf="@+id/mail"
        android:layout_marginEnd="@dimen/_10sdp"
        android:contentDescription="@string/call"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_20sdp"/>

    <ImageView
        android:layout_width="@dimen/_26sdp"
        android:layout_height="@dimen/_26sdp"
        android:background="@drawable/whatsapp_icon"
        app:layout_constraintStart_toEndOf="@+id/mail"
        android:layout_marginStart="@dimen/_10sdp"
        android:contentDescription="@string/whatsapp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_20sdp"/>


</androidx.constraintlayout.widget.ConstraintLayout>